--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "koa-convert": "^1.2.0",
     "koa-views": "^6.1.4",
     "koa2-cors": "^2.0.5",
-    "pug": "^2.0.0"
+    "pug": "^2.0.0",
+    "puppeteer": "^1.1.1"
   }
 }
