--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "koa-views": "^6.1.4",
     "koa2-cors": "^2.0.5",
     "pug": "^2.0.0",
-    "puppeteer": "^1.1.1"
+    "puppeteer": "^1.1.1",
+    "request": "^2.83.0",
+    "request-promise-native": "^1.0.5"
   }
 }
