--- a/package.json
+++ b/package.json
@@ -22,14 +22,20 @@
   },
   "homepage": "https://github.com/jacobxq/koa-movie#readme",
   "dependencies": {
+    "ali-oss": "^4.13.0",
+    "axios": "^0.18.0",
+    "co": "^4.6.0",
     "ejs": "^2.5.7",
     "koa": "^2.5.0",
     "koa-convert": "^1.2.0",
     "koa-views": "^6.1.4",
     "koa2-cors": "^2.0.5",
+    "mz": "^2.7.0",
+    "nanoid": "^1.0.2",
     "pug": "^2.0.0",
     "puppeteer": "^1.1.1",
     "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "request-promise-native": "^1.0.5"
   }
 }
