向数据库导入爬取的电影数据

--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
   "dependencies": {
     "ali-oss": "^4.13.0",
     "axios": "^0.18.0",
+    "bcrypt": "^1.0.3",
     "co": "^4.6.0",
     "ejs": "^2.5.7",
+    "glob": "^7.1.2",
     "koa": "^2.5.0",
     "koa-convert": "^1.2.0",
     "koa-views": "^6.1.4",
     "koa2-cors": "^2.0.5",
+    "mongoose": "^5.0.9",
     "mz": "^2.7.0",
     "nanoid": "^1.0.2",
     "pug": "^2.0.0",
