--- a/package.json
+++ b/package.json
@@ -33,13 +33,28 @@
     "koa-router": "^7.4.0",
     "koa-views": "^6.1.4",
     "koa2-cors": "^2.0.5",
+    "lodash": "^4.17.5",
     "mongoose": "^5.0.9",
     "mz": "^2.7.0",
     "nanoid": "^1.0.2",
     "pug": "^2.0.0",
     "puppeteer": "^1.1.1",
+    "ramda": "^0.25.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "request-promise-native": "^1.0.5"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.2",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.12",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1"
   }
 }
