--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "koa-views": "^6.1.4",
     "koa2-cors": "^2.0.5",
     "lodash": "^4.17.5",
+    "moment": "^2.21.0",
     "mongoose": "^5.0.9",
     "mz": "^2.7.0",
     "nanoid": "^1.0.2",
