--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "koa-convert": "^1.2.0",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
+    "koa-session": "^5.8.1",
     "koa-views": "^6.1.4",
     "koa2-cors": "^2.0.5",
     "lodash": "^4.17.5",
